# dz_19_1_ow

./: .gitignore  README.md  main.py  pyproject.toml  web.html
