[tool.poetry]
name = "dz_19_1_ov"
version = "0.1.0"
description = ""
authors = ["vitek <rgavih@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
